# BrainrotGen

./: .gitignore  .pre-commit-config.yaml  API.md  QUALITY_REPORT.md  README-WORKER.md  README.md  docker-compose.yml  package-lock.json  package.json  requirements-dev.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  brainrotgen.db  pyproject.toml
backend/data/: app.db
backend/src/brainrot_backend/: __init__.py  main.py
backend/src/brainrot_backend/api/: deps.py  router.py
backend/src/brainrot_backend/api/v1/: router.py
backend/src/brainrot_backend/api/v1/endpoints/: auth.py  health.py  jobs.py
backend/src/brainrot_backend/core/: __init__.py  config.py  media_paths.py  security.py
backend/src/brainrot_backend/db/: base.py  schema_updates.py  session.py
backend/src/brainrot_backend/models/: __init__.py  job.py  user.py
backend/src/brainrot_backend/schemas/: auth.py  job.py
backend/src/brainrot_backend/services/: __init__.py  quota.py
backend/tests/: __init__.py  conftest.py  load_test.py  test_auth.py  test_estimate_duration.py  test_health.py  test_jobs.py  test_media_paths.py  test_security.py
data/: add_job.py  check.py  init_db.py
frontend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README-FRONTEND.md  README.md  api.py  app.py  duration.py  index.html  package-lock.json  package.json  pyproject.toml  state.py  tsconfig.json  validators.py
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Generate.css  Generate.tsx  Login.css  Login.tsx  Preview.css  Preview.tsx  Register.tsx
frontend/tests/: _state_harness.py  conftest.py  test_api.py  test_duration.py  test_e2e_app.py  test_state.py  test_validators.py
reports/load/: report_20260417_101342.html
scripts/: add_job.py  check_radon_cc_threshold.py  run_load_tests.sh  run_pre_commit_checks.py
worker/: .dockerignore  .flake8  Dockerfile  db.py  job_queue.py  main.py  process.py  pyproject.toml  queue.py
worker/assets/minecraft/: README.txt
worker/assets/subway/: README.txt
worker/data/: add_job.py
worker/generate_video/: pipeline.py  subtitles.py  tts.py  video.py
worker/src/: db.py  job_queue.py  launcher.sh  main.py  process.py
worker/src/generate_video/: backgrounds.py  pipeline.py  subtitles.py  tts.py  video.py
worker/src/workers/: worker_render.py  worker_subtitles.py  worker_tts.py
worker/tests/: conftest.py  test_job_queue.py  test_process.py
worker/tests/generate_video/: test_backgrounds.py  test_pipeline.py  test_subtitles.py  test_tts.py  test_video.py
worker/tests/workers/: test_worker_render.py  test_worker_subtitles.py  test_worker_tts.py
worker/worker/: pipeline.py  video.py
