[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "Gpshfrd",email = "cl27f27f@gmil.com"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
