[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "BrainrotGen Streamlit UI"
authors = ["BrainrotGen Team <team@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.56.0,<2.0.0"
requests = ">=2.33.1,<3.0.0"
streamlit-autorefresh = ">=1.0.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
radon = "*"
bandit = "*"
pytest = "*"
pytest-cov = "*"
responses = "*"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
