[project]
name = "worker"
version = "0.1.0"
description = ""
authors = [
    {name = "MisABU",email = "maashaainn@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
