[project]
name = "worker"
version = "0.1.0"
description = ""
authors = [
    {name = "MisABU",email = "maashaainn@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "bandit (>=1.9.4,<2.0.0)"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=src --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]
pythonpath = [".", "src"]
